--- a/app/views/schedules/_form.html.erb
+++ b/app/views/schedules/_form.html.erb
@@ -34,8 +34,8 @@
   </div>
   <div class="field">
     <div class="ui toggle checkbox">
-      <%= f.check_box :public %>
-      <%= f.label :public, t('.public') %>
+      <%= f.check_box :hidden %>
+      <%= f.label :hidden, t('.hidden') %>
     </div>
   </div>
   <%= f.submit t('.submit'), class:'ui blue button' %>
