--- a/app/views/bulletins/show.html.erb
+++ b/app/views/bulletins/show.html.erb
@@ -14,13 +14,11 @@
   <p>
     <%= link_to edit_bulletin_path(@bulletin), class:"ui labeled icon button" do %>
       <i class="edit icon"></i><%= t '.edit' %>
-    <% end %>
-    <% if is_admin? %>
-      <%= link_to @bulletin, method: :delete, data: { confirm: t('.delete_confirm') },
-          class:"ui red labeled icon button" do %>
-        <i class="trash icon"></i><%=t '.delete' %>
-      <% end %>
-    <% end %>
+    <% end if can? :update, @bulletin %>
+    <%= link_to @bulletin, method: :delete, data: { confirm: t('.delete_confirm') },
+        class:"ui red labeled icon button" do %>
+      <i class="trash icon"></i><%=t '.delete' %>
+    <% end if can? :destroy, @bulletin %>
   </p>
 </div>
 <div class="ui piled segment"><%= raw @bulletin.content %></div>
