--- a/app/views/instruments/show.html.erb
+++ b/app/views/instruments/show.html.erb
@@ -18,13 +18,11 @@
   <p>
     <%= link_to edit_instrument_path(@instrument), class:"ui labeled icon button" do %>
       <i class="edit icon"></i><%= t '.edit' %>
-    <% end %>
-    <% if is_admin? %>
-      <%= link_to @instrument, method: :delete, data: { confirm: t('.delete_confirm') },
-          class:"ui red labeled icon button" do %>
-        <i class="trash icon"></i><%=t '.delete' %>
-      <% end %>
-    <% end %>
+    <% end if can? :update, @instrument %>
+    <%= link_to @instrument, method: :delete, data: { confirm: t('.delete_confirm') },
+        class:"ui red labeled icon button" do %>
+      <i class="trash icon"></i><%=t '.delete' %>
+    <% end if can? :destroy, @instrument %>
   </p>
 </div>
 <div class="ui piled segment"><%= raw @instrument.content %></div>
