--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,25 +15,25 @@
     <%= link_to content_tag('i',nil,class:'large home icon') +
           t('module.home'), root_path, class:'item' %>
     <%= link_to content_tag('i',nil,class:'large comments icon') +
-          t('module.topics'), topics_path, class:'item' %>
+          t('module.topics'), topics_path, class:'item' if can? :read, Topic %>
     <%= link_to content_tag('i',nil,class:'large pencil icon') +
-          t('module.wikis'), wikis_path, class:'item' %>
+          t('module.wikis'), wikis_path, class:'item' if can? :read, Wiki %>
     <%= link_to content_tag('i',nil,class:'large calendar icon') +
-          t('module.schedule'), schedules_path, class:'item' %>
+          t('module.schedule'), schedules_path, class:'item' if can? :read, Schedule %>
     <%= link_to content_tag('i',nil,class:'large folder open icon') +
-          t('module.resources'), resources_path, class:'item' %>
+          t('module.resources'), resources_path, class:'item' if can? :read, Resource %>
     <%= link_to content_tag('i',nil,class:'large newspaper outline icon') +
-          t('module.news'), news_index_path, class:'item' %>
+          t('module.news'), news_index_path, class:'item' if can? :read, News %>
     <%= link_to content_tag('i',nil,class:'large briefcase icon') +
-          t('module.meetings'), meetings_path, class:'item' %>
+          t('module.meetings'), meetings_path, class:'item' if can? :read, Meeting %>
     <%= link_to content_tag('i',nil,class:'large flag icon') +
-          t('module.achievements'), achievements_path, class:'item' %>
+          t('module.achievements'), achievements_path, class:'item' if can? :read, Achievement %>
     <%= link_to content_tag('i',nil,class:'large cube icon') +
-          t('module.instruments'), instruments_path, class:'item' %>
+          t('module.instruments'), instruments_path, class:'item' if can? :read, Instrument %>
     <%= link_to content_tag('i',nil,class:'large bullhorn icon') +
-          t('module.bulletin'), bulletins_path, class:'item' %>
+          t('module.bulletin'), bulletins_path, class:'item' if can? :read, Bulletin %>
     <%= link_to content_tag('i',nil,class:'large users icon') +
-          t('module.users'), users_path, class:'item' if is_admin? %>
+          t('module.users'), users_path, class:'item' if can? :read, User %>
   </div>
 
   <!-- top fixed menu -->
