--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -17,7 +17,7 @@
   <% end %>
   <%= link_to new_news_path, class:"ui green labeled icon button" do %>
     <i class="plus icon"></i><%=t '.new' %>
-  <% end %>
+  <% end if can? :create, News %>
 </div>
 
 <table class="ui table segment">
