--- a/app/views/topics/_form.html.erb
+++ b/app/views/topics/_form.html.erb
@@ -26,6 +26,12 @@
     <%= f.label :content, t('.content') %>
     <%= f.text_area :content, class:"editor" %>
   </div>
+  <div class="field">
+    <div class="ui toggle checkbox">
+      <%= f.check_box :hidden %>
+      <%= f.label :hidden, t('.hidden') %>
+    </div>
+  </div>
   <%= f.submit t('.submit'), class:"ui blue button" %>
   <%= link_to t('.cancel'), topics_path, class:"ui button" %>
 <% end %>
