--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -17,6 +17,102 @@
     <%= f.label :description, t('.description') %>
     <%= f.text_area :description %>
   </div>
+  <div class="field">
+    <%= f.label :admins, t('.admins') %>
+    <%= collection_check_boxes(:group, :admin_ids, User.all, :id, :name) do |b| %>
+      <div class="ui checkbox">
+        <%= b.check_box %><%= b.label %>
+      </div>
+    <% end %>
+  </div>
+  <div class="field">
+    <%= f.label :members, t('.members') %>
+    <%= collection_check_boxes(:group, :member_ids, User.all, :id, :name) do |b| %>
+      <div class="ui checkbox">
+        <%= b.check_box %><%= b.label %>
+      </div>
+    <% end %>
+  </div>
+
+  <h4 class="ui dividing header"><%= t('users.edit.permission') %></h4>
+
+  <%= f.fields_for :permission, @group.permission do |ff| %>
+
+    <div class="two fields">
+      <div class="field">
+        <%= ff.label :topic, t('users.edit.permission_topic') %>
+        <%= ff.select :topic,
+          User.permissions.map{|k,v| [t('users.edit.permissions')[v], v]},
+          {},{class:"ui dropdown"} %>
+      </div>
+
+      <div class="field">
+        <%= ff.label :comment, t('users.edit.permission_comment') %>
+        <%= ff.select :comment,
+          User.permissions.map{|k,v| [t('users.edit.permissions')[v], v]},
+          {},{class:"ui dropdown"} %>
+      </div>
+    </div>
+
+    <div class="two fields">
+      <div class="field">
+        <%= ff.label :achievement, t('users.edit.permission_achievement') %>
+        <%= ff.select :achievement,
+          User.permissions.map{|k,v| [t('users.edit.permissions')[v], v]},
+          {},{class:"ui dropdown"} %>
+      </div>
+
+      <div class="field">
+        <%= ff.label :bulletin, t('users.edit.permission_bulletin') %>
+        <%= ff.select :bulletin,
+          User.permissions.map{|k,v| [t('users.edit.permissions')[v], v]},
+          {},{class:"ui dropdown"} %>
+      </div>
+    </div>
+
+    <div class="two fields">
+      <div class="field">
+        <%= ff.label :instrument, t('users.edit.permission_instrument') %>
+        <%= ff.select :instrument,
+          User.permissions.map{|k,v| [t('users.edit.permissions')[v], v]},
+          {},{class:"ui dropdown"} %>
+      </div>
+
+      <div class="field">
+        <%= ff.label :meeting, t('users.edit.permission_meeting') %>
+        <%= ff.select :meeting,
+          User.permissions.map{|k,v| [t('users.edit.permissions')[v], v]},
+          {},{class:"ui dropdown"} %>
+      </div>
+    </div>
+
+    <div class="two fields">
+      <div class="field">
+        <%= ff.label :news, t('users.edit.permission_news') %>
+        <%= ff.select :news,
+          User.permissions.map{|k,v| [t('users.edit.permissions')[v], v]},
+          {},{class:"ui dropdown"} %>
+      </div>
+
+      <div class="field">
+        <%= ff.label :resource, t('users.edit.permission_resource') %>
+        <%= ff.select :resource,
+          User.permissions.map{|k,v| [t('users.edit.permissions')[v], v]},
+          {},{class:"ui dropdown"} %>
+      </div>
+    </div>
+
+    <div class="two fields">
+      <div class="field">
+        <%= ff.label :wiki, t('users.edit.permission_wiki') %>
+        <%= ff.select :wiki,
+          User.permissions.map{|k,v| [t('users.edit.permissions')[v], v]},
+          {},{class:"ui dropdown"} %>
+      </div>
+    </div>
+
+  <% end %>
+
   <%= f.submit t('.submit'), class:"ui blue button" %>
   <%= link_to t('.cancel'), groups_path, class:"ui button" %>
 <% end %>
