update simple_calendar version & improve calendar styles

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -44,4 +44,13 @@
   th{
     width:14.2857% !important;
   }
+
+  .today {
+    background: #F5F5F5;
+  }
+
+  .prev-month,
+  .next-month {
+    background: #DDD;
+  }
 }
