add inventory module

--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -109,6 +109,13 @@
           User.permissions.map{|k,v| [t('users.edit.permissions')[v], v]},
           {},{class:"ui dropdown"} %>
       </div>
+
+      <div class="field">
+        <%= ff.label :inventory, t('users.edit.permission_inventory') %>
+        <%= ff.select :inventory,
+          User.permissions.map{|k,v| [t('users.edit.permissions')[v], v]},
+          {},{class:"ui dropdown"} %>
+      </div>
     </div>
 
   <% end %>
