--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -56,7 +56,7 @@
   </thead>
   <tbody>
     <% modules = [Achievement, Bulletin, Comment, Instrument, Meeting, News,
-      Resource, Topic, Wiki] %>
+      Resource, Topic, Wiki, Inventory] %>
     <% for m in modules %>
       <tr>
         <td><%=t "users.edit.permission_#{m.to_s.downcase}" %></td>
