--- a/app/views/orders/edit.html.erb
+++ b/app/views/orders/edit.html.erb
@@ -1,9 +1,9 @@
 <div class="ui vertical segment">
   <div class="ui header">
     <div class="ui huge breadcrumb">
-      <%= link_to bulletins_path, class:'section' do %>
-        <i class="blue bullhorn icon"></i>
-        <%=t 'module.bulletin' %>
+      <%= link_to orders_path, class:'section' do %>
+        <i class="blue payment icon"></i>
+        <%=t 'module.order' %>
       <% end %>
       <i class="right chevron icon divider"></i>
       <div class="active section"><%=t '.edit' %></div>
