--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -107,7 +107,7 @@
     </tr>
   </thead>
   <tbody>
-    <% modules = [Achievement, Bulletin, Comment, Instrument, Meeting, News,
+    <% modules = [Achievement, Order, Comment, Instrument, Meeting, News,
       Resource, Topic, Wiki, Inventory] %>
     <% for m in modules %>
       <tr>
