--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -55,7 +55,7 @@
     </tr>
   </thead>
   <tbody>
-    <% modules = [Achievement, Bulletin, Comment, Instrument, Meeting, News,
+    <% modules = [Achievement, Order, Comment, Instrument, Meeting, News,
       Resource, Topic, Wiki, Inventory] %>
     <% for m in modules %>
       <tr>
