--- a/app/views/layouts/visitor.html.erb
+++ b/app/views/layouts/visitor.html.erb
@@ -13,7 +13,7 @@
     <%= link_to root_path, class:"item" do %>
       <b><%= t 'app.name.long' %></b>
     <% end %>
-    <div class="ui dropdown item" data-content="<%=t 'menu.popup.languages' %>">
+    <div class="ui dropdown item" data-content="<%=t 'menu.languages' %>">
       <i class="world icon"></i>
       <div class="menu">
         <% for k,v in avaliable_locales %>
