--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="ui vertical segment">
   <div class="ui header">
     <div class="ui huge breadcrumb">
-      <%= link_to wikis_path, class:'section' do %>
+      <%= link_to users_path, class:'section' do %>
         <i class="blue users icon"></i>
         <%=t 'module.users' %>
       <% end %>
