--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,6 +38,8 @@
           t('module.users'), users_path, class:'item' if can? :read, User %>
     <%= link_to content_tag('i',nil,class:'large sitemap icon') +
           t('module.groups'), groups_path, class:'item' if can? :read, Group %>
+    <%= link_to content_tag('i',nil,class:'large plug icon') +
+          t('module.oauth'), oauth_applications_path, class:'item' if current_user.admin? %>
   </div>
 
   <!-- top fixed menu -->
