--- a/app/views/doorkeeper/applications/show.html.erb
+++ b/app/views/doorkeeper/applications/show.html.erb
@@ -1,8 +1,8 @@
 <div class="ui vertical segment">
   <div class="ui header">
     <div class="ui huge breadcrumb">
-      <%= link_to oauth_applications_path, class:'section' do %>
-        <i class="blue comments icon"></i>
+      <%= link_to oauth_authorized_applications_path, class:'section' do %>
+        <i class="blue plug icon"></i>
         <%=t 'module.oauth' %>
       <% end %>
       <i class="right chevron icon divider"></i>
