--- a/app/views/doorkeeper/applications/_form.html.erb
+++ b/app/views/doorkeeper/applications/_form.html.erb
@@ -4,27 +4,27 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %>
+    <%= f.label :name, t('.name') %>
     <%= f.text_field :name %>
     <%= doorkeeper_errors_for application, :name %>
   </div>
 
   <div class="field">
-    <%= f.label :redirect_uri %>
+    <%= f.label :redirect_uri, t('.redirect_uri') %>
     <%= f.text_area :redirect_uri %>
     <%= doorkeeper_errors_for application, :redirect_uri %>
-    <span class="help-block">
+    <p>
       <%= t('doorkeeper.applications.help.redirect_uri') %>
-    </span>
+    </p>
     <% if Doorkeeper.configuration.native_redirect_uri %>
-        <span class="help-block">
-          <%= raw t('doorkeeper.applications.help.native_redirect_uri', native_redirect_uri: "<code>#{ Doorkeeper.configuration.native_redirect_uri }</code>") %>
-        </span>
+      <p>
+        <%= raw t('doorkeeper.applications.help.native_redirect_uri', native_redirect_uri: "<code>#{ Doorkeeper.configuration.native_redirect_uri }</code>") %>
+      </p>
     <% end %>
   </div>
 
   <div class="field">
-    <%= f.label :scopes %>
+    <%= f.label :scopes, t('.scope') %>
     <%= f.text_field :scopes %>
     <%= doorkeeper_errors_for application, :scopes %>
     <span class="help-block">
