--- a/app/views/doorkeeper/applications/new.html.erb
+++ b/app/views/doorkeeper/applications/new.html.erb
@@ -1,12 +1,12 @@
 <div class="ui vertical segment">
   <div class="ui header">
     <div class="ui huge breadcrumb">
-      <%= link_to oauth_applications_path, class:'section' do %>
+      <%= link_to oauth_authorized_applications_path, class:'section' do %>
         <i class="blue plug icon"></i>
-        <%=t '.title' %>
+        <%=t 'module.oauth' %>
       <% end %>
       <i class="right chevron icon divider"></i>
-      <div class="active section"><%=t '.new' %></div>
+      <div class="active section"><%=t '.title' %></div>
     </div>
   </div>
 </div>
